[gd_scene load_steps=8 format=3 uid="uid://dimowh2004qda"]

[ext_resource type="Script" path="res://scenes/online_battle/p2p_battlefield/p2p_game_end_gui/p2p_game_end_gui.gd" id="1_6kbs2"]
[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="2_ek0gi"]
[ext_resource type="AudioStream" uid="uid://l41ub0f17jk3" path="res://resources/sound/battlefield/bone_reward.mp3" id="3_liblp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ti00"]
bg_color = Color(0, 0.0196078, 0.0705882, 0.443137)

[sub_resource type="Animation" id="Animation_xhvfg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/HBoxContainer:anchors_preset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/HBoxContainer:layout_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_nk5dc"]
resource_name = "start"
length = 1.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%ToRoomButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%ToRoomButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1, 1.5),
"transitions": PackedFloat32Array(0.450625, 1),
"update": 0,
"values": [Vector2(388.5, 450), Vector2(388.5, 414)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%GameResultLabel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.203063, 1),
"update": 0,
"values": [Vector2(0, 255), Vector2(0, 155)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/HBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.594604, 1),
"update": 0,
"values": [Vector2(0, 337), Vector2(0, 274)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%GameResultLabel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel/HBoxContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%GameResultLabel:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.353553, 1),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Panel:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("..:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Panel/HBoxContainer:anchors_preset")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Panel/HBoxContainer:layout_mode")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ywhn5"]
_data = {
"RESET": SubResource("Animation_xhvfg"),
"start": SubResource("Animation_nk5dc")
}

[node name="P2PGameEndGUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_6kbs2")

[node name="Control" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ek0gi")
theme_type_variation = &"PanelEmpty"

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_0ti00")

[node name="GameResultLabel" type="Label" parent="Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1152.0
offset_top = 155.0
offset_right = 2304.0
offset_bottom = 246.0
grow_horizontal = 2
pivot_offset = Vector2(575, 51)
theme_type_variation = &"LabelXLarge"
text = "@VICTORY"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -47.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Player1Status" type="Label" parent="Control/Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "@VICTORY"
horizontal_alignment = 1

[node name="Player1Name" type="Label" parent="Control/Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "<PLAYER1>"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Player2Status" type="Label" parent="Control/Panel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "@DEFEAT"
horizontal_alignment = 1

[node name="Player2Name" type="Label" parent="Control/Panel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "<PLAYER2>"
horizontal_alignment = 1

[node name="ToRoomButton" type="Button" parent="Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1540.5
offset_top = 414.0
offset_right = 1915.5
offset_bottom = 473.0
grow_horizontal = 2
pivot_offset = Vector2(165, 25)
focus_mode = 0
theme_type_variation = &"ButtonLarge"
text = "@BACK_TO_ROOM"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Control")
libraries = {
"": SubResource("AnimationLibrary_ywhn5")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_liblp")
volume_db = -8.0
